# hs100-rust-api

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
examples/: example.rs
src/: error.rs  lib.rs  types.rs
