[package]
name = "hs100api"
version = "0.1.1"
edition = "2021"
authors = ["Alexandre Beslic <alexandre.beslic@gmail.com>"]
description = "A library to manipulate and get data from a TP-Link HS-100/110 smart plugs"
repository = "https://github.com/abronan/hs100-rust-api"
homepage = "https://github.com/abronan/hs100-rust-api"
license = "MIT"
exclude = [
    "example",
]

[dependencies]
byteorder = "1.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[[example]]
name = "example"
